[project]
name = "crafting-test-driven-software-with-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Debanshu Samantaray",email = "42534802+Debanshusam@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
